more clever way to load old mapping